# git-config-manager

./: LICENSE  README.org  git-config-manager.cabal  stack.yaml
app/: Git.hs  Main.hs  Types.hs
elisp/: magit-gcm.el
