name:                git-config-manager
version:             0.1.0.0
synopsis:            Manage git repository configurations with ease
description:         Please see README.org
homepage:            https://github.com/d12frosted/git-config-manager
license:             BSD3
license-file:        LICENSE
author:              Boris Buliga
maintainer:          d12frosted@gmail.com
copyright:           2016 Boris Buliga
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable git-config-manager
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 0.11.2
                     , attoparsec >= 0.13
                     , bytestring >= 0.10.6.0
                     , d12-hs-path
                     , exceptions >= 0.8.2.1
                     , git-config-manager
                     , optparse-applicative >= 0.12.1
                     , path >= 0.5
                     , text >= 1.2
                     , transformers >= 0.4
                     , turtle >= 1.2.8
                     , unordered-containers >= 0.2.7.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d12frosted/git-config-manager
